# cpp-task-manager

./: .gitignore  CMakeLists.txt
src/: main.c  main.cpp
src/json/: .goutputstream-PVU4R2  file.json  json.cpp  json.h  main.cpp
